Display CSV on the page

--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -4,6 +4,7 @@
   "description": "A client-server app that generates CSV reports from JSON data",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1"
