--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
